--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Prueba</title>
+	<title>Primera página web</title>
 	<script src="js/app.js"></script>
 </head>
 <body>
-	<h1>Configuración de GIT</h1>	
+	<h1>Configuración de GIT</h1>
+	<ul>
+		<li>JS</li>
+		<li>.NET</li>
+	</ul>
 </body>
 </html>
