Cuarto commit hecho

--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-	<meta charset="UTF-8">
-	<title>Primera página web</title>
-	<script src="js/app.js"></script>
+    <meta charset="UTF-8">
+    <title>Primera página web</title>
+    <script src="js/app.js"></script>
 </head>
+
 <body>
-	<h1>Configuración de GIT</h1>
-	<ul>
-		<li>JS</li>
-		<li>.NET</li>
-	</ul>
-	<div id=""></div>
+    <h1>Configuración de GIT</h1>
+    <ul>
+        <li>JS</li>
+        <li>.NET</li>
+    </ul>
+    <div id="sector"></div>
 </body>
+
 </html>
