--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <ul>
         <li>JS</li>
         <li>.NET</li>
+        <li>JEE</li>
+        <li>Php</li>
     </ul>
     <div id="sector"></div>
 </body>
